k8s/minikube/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service

spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
    - name: puma
      port: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: sample-app
    server: backend
    software: rails
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sample-app

  template:
    metadata:
      labels:
        app: sample-app
        server: backend
        software: rails
    spec:
      containers:
        - name: rails
          image: minikube/backend:v0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          command:
            - bundle
          args:
            - exec
            - puma
            - -C
            - config/puma.rb
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 30;"]
