k8s/minikube/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
    - name: mysql
      port: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: sample-app
    server: db
    software: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
        server: db
        software: mysql

    spec:
      volumes:
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      containers:
        - name: mysql
          image: mysql:5.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-volume
              mountPath: /var/lib/mysql
