k8s/minikube/sample-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service-green

spec:
  type: NodePort
  selector:
    app: nginx
    version: green
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30010
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nginx-green
  labels:
    app: nginx
    version: green

spec:
  replicas: 4
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: nginx
      version: green

  template:
    metadata:
      labels:
        app: nginx
        version: green
    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: nginx
          image: nginx:1.15.8
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 5m
          ports:
            - name: target
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo 'Green' > /usr/share/nginx/html/index.html"]
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1; nginx -s quit"]
