k8s/minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: rails-puma.com
   http:
     paths:
     - path: /*
       backend:
         serviceName: webserver-service
         servicePort: 80
