k8s/minikube/sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: sample-nginx.com
   http:
     paths:
     - path: /*
       backend:
         serviceName: sample-service-green
         servicePort: 80
